<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.myfirstapp.MainActivity"
        android:verticalScrollbarPosition="right"
        android:id="@+id/constraintLayout1" android:background="@android:color/holo_blue_light">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText1"
            android:hint="@string/edit_message"
            android:inputType="number|numberDecimal"
            android:selectAllOnFocus="true" android:focusedByDefault="true"
            app:layout_constraintRight_toLeftOf="@+id/button1"
            app:layout_constraintLeft_toRightOf="@+id/textView1" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton" android:textSize="24sp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button1"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText1"
            android:text="@string/AP_Calc" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/editText1" android:onClick="Calc_AP"
            android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:textStyle="bold"
            android:textSize="14sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText2"
            android:hint="@string/edit_message"
            android:inputType="number|numberDecimal" android:selectAllOnFocus="true"
            android:focusedByDefault="false"
            app:layout_constraintRight_toLeftOf="@+id/button2" app:layout_constraintLeft_toRightOf="@+id/textView2"
            android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/editText5"
            android:textSize="24sp" android:layout_marginLeft="0dp"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/button2"
            android:text="@string/VP_Calc"
            android:onClick="Calc_VP"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintBaseline_toBaselineOf="@+id/editText2"
            android:textStyle="bold" android:textSize="14sp" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/button" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText3"
            android:hint="@string/edit_message"
            android:inputType="number|numberDecimal"
            android:selectAllOnFocus="true" android:focusedByDefault="false"
            app:layout_constraintRight_toLeftOf="@+id/button3" app:layout_constraintLeft_toRightOf="@+id/textView3"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/editText7"
            android:textSize="24sp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button3"
            android:text="@string/VK_Calc"
            android:onClick="Calc_VK"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText3" android:layout_marginRight="16dp"
            android:textStyle="bold" android:layout_marginEnd="16dp" android:textSize="14sp"
            android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="@+id/button"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText4"
            android:hint="@string/edit_message"
            android:inputType="number|numberDecimal"
            android:selectAllOnFocus="true" android:focusedByDefault="false"
            android:textSize="24sp"
            app:layout_constraintRight_toLeftOf="@+id/textView9" app:layout_constraintLeft_toRightOf="@+id/textView4"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText3"/>
    <TextView
            android:text="@string/AP_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText1"
            app:layout_constraintRight_toLeftOf="@+id/editText1" app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:textStyle="bold"
            android:textSize="22sp"/>
    <TextView
            android:text="@string/VP_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintRight_toLeftOf="@+id/editText2"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintBaseline_toBaselineOf="@+id/editText2"
            android:textStyle="bold" android:textSize="22sp"/>
    <TextView
            android:text="@string/VK_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintRight_toLeftOf="@+id/editText3"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintBaseline_toBaselineOf="@+id/editText3"
            android:layout_marginLeft="16dp" android:textStyle="bold" android:textSize="22sp"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/WP_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText4"
            app:layout_constraintRight_toLeftOf="@+id/editText4" app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:ems="10"
            android:id="@+id/editText5"
            android:inputType="number" android:selectAllOnFocus="true"
            app:layout_constraintRight_toLeftOf="@+id/textView6"
            app:layout_constraintLeft_toRightOf="@+id/textView5" android:layout_marginRight="0dp"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText1" android:textSize="24sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText6"
            android:inputType="number|numberDecimal" android:selectAllOnFocus="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText5" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" android:textSize="24sp" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/button" app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:text="@string/Gewig_Label"
            app:layout_constraintRight_toLeftOf="@+id/editText5" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText5"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:textStyle="bold"
            android:textSize="22sp" android:paddingRight="0dp" android:paddingEnd="0dp" android:paddingStart="0dp"
            android:paddingLeft="0dp"/>
    <TextView
            android:text="@string/Prys_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintRight_toLeftOf="@+id/editText6"
            app:layout_constraintLeft_toRightOf="@+id/editText5"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText5" android:textStyle="bold"
            android:textSize="22sp" android:layout_marginLeft="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:text="@string/Gewig_Label"
            app:layout_constraintRight_toLeftOf="@+id/editText5" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText7"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:textStyle="bold"
            android:textSize="22sp" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:ems="10"
            android:id="@+id/editText7"
            android:inputType="number" android:selectAllOnFocus="true"
            app:layout_constraintRight_toLeftOf="@+id/textView6"
            app:layout_constraintLeft_toRightOf="@+id/textView5" android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2" android:textSize="24sp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/Prys_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintRight_toLeftOf="@+id/editText6"
            app:layout_constraintLeft_toRightOf="@+id/editText5"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText7" android:textStyle="bold"
            android:textSize="22sp" android:layout_marginLeft="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText8"
            android:inputType="number|numberDecimal" android:selectAllOnFocus="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText7" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" android:textSize="24sp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="@+id/button"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText9"
            android:hint="@string/edit_message"
            android:inputType="number|numberDecimal"
            android:selectAllOnFocus="true" android:focusedByDefault="false"
            android:textSize="24sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText4" android:layout_marginRight="16dp"
            android:layout_marginLeft="0dp" app:layout_constraintLeft_toLeftOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.0"/>
    <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleButton" android:layout_marginTop="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" android:textOff="@string/Toggle_C_Graad"
            android:textOn="@string/Toggle_A_Graad" android:checked="false" android:onClick="Change_Toggle"
            app:layout_constraintTop_toTopOf="parent" android:textStyle="bold"/>
    <TextView
            android:text="@string/WR_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText4"
            app:layout_constraintRight_toLeftOf="@+id/editText9" app:layout_constraintLeft_toRightOf="@+id/editText4"
            android:layout_marginLeft="8dp" android:layout_marginRight="0dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"
            app:layout_constraintBaseline_toBaselineOf="@+id/toggleButton"
            android:layout_marginRight="16dp" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/button1" android:text="@string/Herstel_Button"
            android:layout_marginEnd="16dp" android:textSize="14sp"/>
</android.support.constraint.ConstraintLayout>
